--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+ul {
+  list-style-type: none;
+}
+
+
 .register {
   margin: 0 auto;
   margin-top: 150px;
@@ -30,4 +35,10 @@
 		top: 0;
 		background-color: #a20000;
 	}
+}
+
+/* admin */
+
+.sidebar ul {
+  padding-left: 0px;
 }
